# Guide-Agent

./: .env.example  .gitignore  AboutMe.example.md  CLAUDE.md  README.md  config.example.yaml  pyproject.toml
src/guide_agent/: cli.py  config.py  models.py  refresh.py
src/guide_agent/agent/: base.py  conversation.py  expansion.py  feedback.py  planner.py  researcher.py  tools.py
src/guide_agent/email/: receiver.py  sender.py  templates.py
src/guide_agent/skills/: loader.py
src/guide_agent/skills/examples/: REFERENCES.md  SKILL.md
src/guide_agent/skills/execute/: REFERENCES.md  SKILL.md
src/guide_agent/skills/intelligent_research/: SKILL.md  SOURCES.md
src/guide_agent/skills/learn/: REFERENCES.md  SKILL.md
src/guide_agent/skills/practice/: REFERENCES.md  SKILL.md
src/guide_agent/skills/research/: BYPASS_HUNTING.md  DRAFT_GENERATION.md  GAP_ANALYSIS.md  SKILL.md
src/guide_agent/sources/: hardcoded.py  newsletter.py  web.py
src/guide_agent/state/: store.py
tests/: test_blog_feed_search.py  test_codereviewlab_search.py  test_conversation.py  test_ctfsearch_search.py  test_email.py  test_execute_tools.py  test_expansion.py  test_feedback.py  test_github_search.py  test_hackerone_search.py  test_pentesterland_search.py  test_prefetched_resources.py  test_refresh.py  test_sitemap_search.py  test_skill_loader.py  test_sources.py  test_store.py
