[project]
name = "guide-agent"
version = "0.1.0"
description = "Hyper-specific bug-class mastery agent — drills a single security bug class through 5 phases (learn, examples, practice, execute, research)"
readme = "README.md"
authors = [
    { name = "Deev Pal" }
]
requires-python = ">=3.12"
license = "MIT"

dependencies = [
    "anthropic>=0.100.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "resend>=2.0.0",
    "jinja2>=3.1.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
guide = "guide_agent.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/guide_agent/email/templates.py" = ["E501"]
"src/guide_agent/agent/planner.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
